correction erreur design

--- a/index.html
+++ b/index.html
@@ -357,11 +357,13 @@
           </div>
           <div class="flex items-center">
             <div class="mr-4 text-martinique-red">
-              <i class="fas fa-hands text-2xl"></i>
+              <i class="fas fa-ranking-star text-2xl"></i>
             </div>
             <div class="text-center">
-              <h3 class="font-bold text-lg">Artisanal</h3>
-              <p class="text-wood-300 text-sm">Chaque pièce est unique</p>
+              <h3 class="font-bold text-lg">Qualité</h3>
+              <p class="text-wood-300 text-sm">
+                Chaques matériaux est choisi avec soins
+              </p>
             </div>
           </div>
         </div>
@@ -487,7 +489,7 @@
           </a>
           <a
             href="pages/articles.html"
-            class="bg-transparent border-2 border-white hover:bg-white hover:text-martinique-red text-white font-bold py-3 px-8 rounded-lg transition duration-300 transform hover:scale-105 text-center"
+            class="bg-transparent border-2 border-white hover:bg-white hover:text-martinique-red text-wood-700 font-bold py-3 px-8 rounded-lg transition duration-300 transform hover:scale-105 text-center"
           >
             Voir nos produits
           </a>
