--- a/pages/articles.html
+++ b/pages/articles.html
@@ -167,7 +167,7 @@
             class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
             data-category="lampes"
           >
-            <div class="h-64 bg-wood-200 relative overflow-hidden">
+            <div class="h-64 relative overflow-hidden">
               <div
                 class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
               >
@@ -204,7 +204,7 @@
             class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
             data-category="bijoux"
           >
-            <div class="h-64 bg-wood-200 relative overflow-hidden">
+            <div class="h-64 relative overflow-hidden">
               <div
                 class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
               >
@@ -236,7 +236,7 @@
             class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
             data-category="sacs"
           >
-            <div class="h-64 bg-wood-200 relative overflow-hidden">
+            <div class="h-64 relative overflow-hidden">
               <div
                 class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
               >
@@ -271,7 +271,7 @@
             class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
             data-category="decoration"
           >
-            <div class="h-64 bg-wood-200 relative overflow-hidden">
+            <div class="h-64 relative overflow-hidden">
               <div
                 class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
               >
@@ -303,7 +303,7 @@
             class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
             data-category="bijoux"
           >
-            <div class="h-64 bg-wood-200 relative overflow-hidden">
+            <div class="h-64 relative overflow-hidden">
               <div
                 class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
               >
@@ -340,7 +340,7 @@
             class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
             data-category="decoration"
           >
-            <div class="h-64 bg-wood-200 relative overflow-hidden">
+            <div class="h-64 relative overflow-hidden">
               <div
                 class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
               >
