--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
 
+    <!-- js-yaml library -->
+    <script src="js/js-yaml.min.js"></script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="imgs/favicon.png" />
   </head>
@@ -42,9 +45,9 @@
               href="index.html"
               class="text-2xl font-serif font-bold flex items-center"
             >
-              <span class="bg-wood-700 text-white p-2 rounded-lg mr-2">
+              <!-- <span class="bg-wood-700 text-white p-2 rounded-lg mr-2">
                 <i class="fas fa-leaf"></i>
-              </span>
+              </span> -->
               CS-Kréyasion
             </a>
           </div>
@@ -114,36 +117,29 @@
 
     <!-- Hero Section -->
     <section
+      id="hero-section"
       class="relative bg-gradient-to-r from-wood-800 to-wood-900 text-white overflow-hidden"
     >
       <div class="absolute inset-0 bg-black opacity-50"></div>
       <div class="container mx-auto px-4 py-32 relative z-10">
         <div class="max-w-2xl">
           <h1
+            id="hero-title"
             class="text-4xl md:text-6xl font-serif font-bold mb-6 animate-fade-in-down"
           >
-            Créations Artisanales
-            <span class="text-martinique-red">Martiniquaises</span>
+            <!-- Content will be populated by JavaScript -->
           </h1>
-          <p class="text-xl mb-8 text-wood-100 animate-fade-in-up">
-            Des objets uniques façonnés avec passion à la Martinique. Découvrez
-            nos lampes, bijoux, sacs à main et objets de décoration.
+          <p
+            id="hero-subtitle"
+            class="text-xl mb-8 text-wood-100 animate-fade-in-up"
+          >
+            <!-- Content will be populated by JavaScript -->
           </p>
           <div
+            id="hero-buttons"
             class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4"
           >
-            <a
-              href="pages/articles.html"
-              class="bg-martinique-red hover:bg-martinique-red-dark text-white font-bold py-3 px-8 rounded-lg transition duration-300 transform hover:scale-105 text-center animate-fade-in-up delay-150"
-            >
-              Découvrir nos créations
-            </a>
-            <a
-              href="pages/contact.html"
-              class="bg-transparent border-2 border-white hover:bg-white hover:text-wood-900 text-white font-bold py-3 px-8 rounded-lg transition duration-300 transform hover:scale-105 text-center animate-fade-in-up delay-300"
-            >
-              Nous contacter
-            </a>
+            <!-- Buttons will be populated by JavaScript -->
           </div>
         </div>
       </div>
@@ -162,133 +158,30 @@
       <div class="container mx-auto px-4">
         <div class="text-center mb-16">
           <h2
+            id="featured-title"
             class="text-3xl md:text-4xl font-serif font-bold text-wood-900 mb-4"
           >
-            Nos Coups de Coeur
+            Nos Coups de Cœur
           </h2>
-          <p class="text-wood-700 max-w-2xl mx-auto">
-            Découvrez nos créations les plus appréciées, conçues avec des
-            techniques artisanales et des matériaux locaux.
+          <p id="featured-subtitle" class="text-wood-700 max-w-2xl mx-auto">
+            Découvrez notre sélection de créations artisanales martiniquaises
           </p>
         </div>
 
         <div
+          id="featured-products-grid"
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8"
         >
-          <!-- Product 1 -->
-          <div
-            class="bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-lightbulb text-4xl text-gray-400"></i>
-              </div>
-              <div
-                class="absolute top-4 right-4 bg-martinique-red text-white px-3 py-1 rounded-full text-sm font-bold"
-              >
-                Nouveau
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Lampe Créole
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Lampe en bois de citronnier avec motifs créoles
-                </p>
-              </div>
-              <div class="flex justify-between items-center mt-auto">
-                <span class="text-martinique-red font-bold text-xl">89€</span>
-                <a
-                  href="pages/articles.html"
-                  class="text-wood-900 hover:text-martinique-red font-medium flex items-center text-sm"
-                >
-                  Voir le produit
-                  <i class="fas fa-arrow-right ml-2 text-xs"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <!-- Product 2 -->
-          <div
-            class="bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-gem text-4xl text-gray-400"></i>
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Boucles d'Oreilles
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Boucles en résine avec motifs floraux
-                </p>
-              </div>
-              <div class="flex justify-between items-center mt-auto">
-                <span class="text-martinique-red font-bold text-xl">29€</span>
-                <a
-                  href="pages/articles.html"
-                  class="text-wood-900 hover:text-martinique-red font-medium flex items-center text-sm"
-                >
-                  Voir le produit
-                  <i class="fas fa-arrow-right ml-2 text-xs"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <!-- Product 3 -->
-          <div
-            class="bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-shopping-bag text-4xl text-gray-400"></i>
-              </div>
-              <div
-                class="absolute top-4 right-4 bg-martinique-green text-white px-3 py-1 rounded-full text-sm font-bold"
-              >
-                Populaire
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">Sac à Main</h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Sac en wax avec bandoulière en cuir
-                </p>
-              </div>
-              <div class="flex justify-between items-center mt-auto">
-                <span class="text-martinique-red font-bold text-xl">65€</span>
-                <a
-                  href="pages/articles.html"
-                  class="text-wood-900 hover:text-martinique-red font-medium flex items-center text-sm"
-                >
-                  Voir le produit
-                  <i class="fas fa-arrow-right ml-2 text-xs"></i>
-                </a>
-              </div>
-            </div>
-          </div>
+          <!-- Products will be populated by JavaScript -->
         </div>
 
         <div class="text-center mt-12">
           <a
+            id="featured-cta"
             href="pages/articles.html"
             class="inline-block bg-wood-800 hover:bg-wood-900 text-white font-bold py-3 px-8 rounded-lg transition duration-300 transform hover:scale-105"
           >
-            Voir tous les produits
+            Voir tous nos produits
           </a>
         </div>
       </div>
@@ -335,7 +228,7 @@
 
         <!-- second tree colonne -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
-          <div class="flex items-center">
+          <div class="flex items-center justify-center flex-col">
             <div class="mr-4 text-martinique-red">
               <i class="fas fa-leaf text-2xl"></i>
             </div>
@@ -346,7 +239,7 @@
               </p>
             </div>
           </div>
-          <div class="flex items-center">
+          <div class="flex items-center justify-center flex-col">
             <div class="mr-4 text-martinique-red">
               <i class="fas fa-hands text-2xl"></i>
             </div>
@@ -355,7 +248,7 @@
               <p class="text-wood-300 text-sm">Chaque pièce est unique</p>
             </div>
           </div>
-          <div class="flex items-center">
+          <div class="flex items-center justify-center flex-col">
             <div class="mr-4 text-martinique-red">
               <i class="fas fa-ranking-star text-2xl"></i>
             </div>
@@ -396,72 +289,11 @@
           </p>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Testimonial 1 -->
-          <div class="bg-white p-8 rounded-xl shadow-lg">
-            <div class="flex items-center mb-6">
-              <div class="w-12 h-12 rounded-full bg-wood-200 mr-4"></div>
-              <div>
-                <h4 class="font-bold text-wood-900">Sophie Martin</h4>
-                <div class="flex text-martinique-red">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-            <p class="text-wood-700 italic">
-              "La lampe créole que j'ai achetée est absolument magnifique ! La
-              qualité du bois et les finitions sont impeccables. Un vrai bijou
-              d'artisanat martiniquais !"
-            </p>
-          </div>
-
-          <!-- Testimonial 2 -->
-          <div class="bg-white p-8 rounded-xl shadow-lg">
-            <div class="flex items-center mb-6">
-              <div class="w-12 h-12 rounded-full bg-wood-200 mr-4"></div>
-              <div>
-                <h4 class="font-bold text-wood-900">Jean-Pierre Dubois</h4>
-                <div class="flex text-martinique-red">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-            <p class="text-wood-700 italic">
-              "Les boucles d'oreilles en résine sont tout simplement
-              extraordinaires. Elles attirent tous les regards quand ma femme
-              les porte. Un cadeau parfait pour une occasion spéciale !"
-            </p>
-          </div>
-
-          <!-- Testimonial 3 -->
-          <div class="bg-white p-8 rounded-xl shadow-lg">
-            <div class="flex items-center mb-6">
-              <div class="w-12 h-12 rounded-full bg-wood-200 mr-4"></div>
-              <div>
-                <h4 class="font-bold text-wood-900">Marie-Louise Thomas</h4>
-                <div class="flex text-martinique-red">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-              </div>
-            </div>
-            <p class="text-wood-700 italic">
-              "Le sac à main en wax est à la fois élégant et pratique. La
-              combinaison des tissus traditionnels avec le design moderne est
-              remarquable. Je recommande vivement !"
-            </p>
-          </div>
+        <div
+          id="testimonials-grid"
+          class="grid grid-cols-1 md:grid-cols-3 gap-8"
+        >
+          <!-- Testimonials will be populated by JavaScript -->
         </div>
       </div>
     </section>
@@ -631,6 +463,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
