--- a/pages/articles.html
+++ b/pages/articles.html
@@ -28,6 +28,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/style.css" />
+
+    <!-- js-yaml library -->
+    <script src="../js/js-yaml.min.js"></script>
   </head>
   <body class="font-sans">
     <!-- Navigation -->
@@ -39,9 +42,9 @@
               href="../index.html"
               class="text-2xl font-serif font-bold flex items-center"
             >
-              <span class="bg-wood-700 text-white p-2 rounded-lg mr-2">
+              <!-- <span class="bg-wood-700 text-white p-2 rounded-lg mr-2">
                 <i class="fas fa-leaf"></i>
-              </span>
+              </span> -->
               CS-Kréyasion
             </a>
           </div>
@@ -112,10 +115,10 @@
     <!-- Hero Section -->
     <section class="bg-wood-800 text-white py-20">
       <div class="container mx-auto px-4 text-center">
-        <h1 class="text-4xl md:text-5xl font-serif font-bold mb-6">
+        <h1 class="text-4xl md:text-5xl font-serif font-bold mb-6" data-content="articles.hero.title">
           Nos Créations
         </h1>
-        <p class="text-xl max-w-3xl mx-auto text-wood-200">
+        <p class="text-xl max-w-3xl mx-auto text-wood-200" data-content="articles.hero.subtitle">
           Découvrez notre collection d'objets artisanaux uniques, conçus avec
           passion à la Martinique
         </p>
@@ -145,13 +148,13 @@
             Bijoux
           </button>
           <button
-            onclick="filterProducts('sacs')"
+            onclick="filterProducts('textile')"
             class="filter-btn bg-white text-wood-900 border border-wood-300 px-6 py-2 rounded-full transition duration-300 hover:bg-wood-800 hover:text-white"
           >
-            Sacs à main
+            Textile
           </button>
           <button
-            onclick="filterProducts('decoration')"
+            onclick="filterProducts('décoration')"
             class="filter-btn bg-white text-wood-900 border border-wood-300 px-6 py-2 rounded-full transition duration-300 hover:bg-wood-800 hover:text-white"
           >
             Décoration
@@ -160,212 +163,10 @@
 
         <!-- Products Grid -->
         <div
+          id="products-container"
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8"
         >
-          <!-- Product 1 -->
-          <div
-            class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-            data-category="lampes"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-lightbulb text-4xl text-gray-400"></i>
-              </div>
-              <div
-                class="absolute top-4 right-4 bg-martinique-red text-white px-3 py-1 rounded-full text-sm font-bold"
-              >
-                Nouveau
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Lampe Créole
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Lampe en bois de citronnier avec motifs créoles
-                </p>
-              </div>
-              <div class="flex justify-between items-center mb-4">
-                <span class="text-martinique-red font-bold text-xl">89€</span>
-              </div>
-              <button
-                class="w-full bg-wood-800 hover:bg-wood-900 text-white font-bold py-2 px-4 rounded-lg transition duration-300"
-              >
-                Ajouter au panier
-              </button>
-            </div>
-          </div>
-
-          <!-- Product 2 -->
-          <div
-            class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-            data-category="bijoux"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-gem text-4xl text-gray-400"></i>
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Boucles d'Oreilles
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Boucles en résine avec motifs floraux
-                </p>
-              </div>
-              <div class="flex justify-between items-center mb-4">
-                <span class="text-martinique-red font-bold text-xl">29€</span>
-              </div>
-              <button
-                class="w-full bg-wood-800 hover:bg-wood-900 text-white font-bold py-2 px-4 rounded-lg transition duration-300"
-              >
-                Ajouter au panier
-              </button>
-            </div>
-          </div>
-
-          <!-- Product 3 -->
-          <div
-            class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-            data-category="sacs"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-shopping-bag text-4xl text-gray-400"></i>
-              </div>
-              <div
-                class="absolute top-4 right-4 bg-martinique-green text-white px-3 py-1 rounded-full text-sm font-bold"
-              >
-                Populaire
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">Sac à Main</h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Sac en wax avec bandoulière en cuir
-                </p>
-              </div>
-              <div class="flex justify-between items-center mb-4">
-                <span class="text-martinique-red font-bold text-xl">65€</span>
-              </div>
-              <button
-                class="w-full bg-wood-800 hover:bg-wood-900 text-white font-bold py-2 px-4 rounded-lg transition duration-300"
-              >
-                Ajouter au panier
-              </button>
-            </div>
-          </div>
-
-          <!-- Product 4 -->
-          <div
-            class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-            data-category="decoration"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-clock text-4xl text-gray-400"></i>
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Horloge Murale
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Horloge en bois recyclé avec motifs créoles
-                </p>
-              </div>
-              <div class="flex justify-between items-center mb-4">
-                <span class="text-martinique-red font-bold text-xl">75€</span>
-              </div>
-              <button
-                class="w-full bg-wood-800 hover:bg-wood-900 text-white font-bold py-2 px-4 rounded-lg transition duration-300"
-              >
-                Ajouter au panier
-              </button>
-            </div>
-          </div>
-
-          <!-- Product 5 -->
-          <div
-            class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-            data-category="bijoux"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-gem text-4xl text-gray-400"></i>
-              </div>
-              <div
-                class="absolute top-4 right-4 bg-martinique-red text-white px-3 py-1 rounded-full text-sm font-bold"
-              >
-                Nouveau
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Collier Madras
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Collier en tissu madras avec pendentif bois
-                </p>
-              </div>
-              <div class="flex justify-between items-center mb-4">
-                <span class="text-martinique-red font-bold text-xl">35€</span>
-              </div>
-              <button
-                class="w-full bg-wood-800 hover:bg-wood-900 text-white font-bold py-2 px-4 rounded-lg transition duration-300"
-              >
-                Ajouter au panier
-              </button>
-            </div>
-          </div>
-
-          <!-- Product 6 -->
-          <div
-            class="product-item bg-white rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105 flex flex-col"
-            data-category="decoration"
-          >
-            <div class="h-64 relative overflow-hidden">
-              <div
-                class="bg-gray-200 border-2 border-dashed rounded-xl w-full h-full flex items-center justify-center"
-              >
-                <i class="fas fa-box text-4xl text-gray-400"></i>
-              </div>
-            </div>
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex-grow">
-                <h3 class="text-xl font-bold text-wood-900 mb-2">
-                  Boîte à Bijoux
-                </h3>
-                <p class="text-wood-700 mb-4 text-sm leading-relaxed">
-                  Boîte en bois avec incrustations de résine
-                </p>
-              </div>
-              <div class="flex justify-between items-center mb-4">
-                <span class="text-martinique-red font-bold text-xl">45€</span>
-              </div>
-              <button
-                class="w-full bg-wood-800 hover:bg-wood-900 text-white font-bold py-2 px-4 rounded-lg transition duration-300"
-              >
-                Ajouter au panier
-              </button>
-            </div>
-          </div>
+          <!-- Products will be dynamically loaded here -->
         </div>
       </div>
     </section>
@@ -529,11 +330,24 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
+    <script type="module">
+      import { parseMarkdownContent } from '../js/content-parser.js';
+      import { renderArticlesContent } from '../js/data-renderer.js';
 
-    <!-- Product filtering script -->
-    <script>
-      function filterProducts(category) {
+      async function loadArticlesContent() {
+        try {
+          const response = await fetch('../data/content.md');
+          const markdown = await response.text();
+          const content = parseMarkdownContent(markdown);
+          renderArticlesContent(content);
+        } catch (error) {
+          console.error('Error loading articles content:', error);
+        }
+      }
+
+      // Global filter function for dynamic products
+      window.filterProducts = function(category) {
         // Update active button
         const buttons = document.querySelectorAll(".filter-btn");
         buttons.forEach((btn) => {
@@ -563,7 +377,13 @@
             product.style.display = "none";
           }
         });
-      }
+      };
+
+      document.addEventListener('DOMContentLoaded', loadArticlesContent);
+    </script>
+  </body>
+</html>
+      
     </script>
   </body>
 </html>
